--- a/src/index.css
+++ b/src/index.css
@@ -9,18 +9,6 @@
 }
 
 body {
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Open Sans',
-    'Helvetica Neue',
-    sans-serif;
   background-color: #f7f7f7;
   color: #444;
 }
@@ -36,7 +24,7 @@ body {
 .loader {
   width: 45px;
   aspect-ratio: 0.75;
-  --c: no-repeat linear-gradient(#333 0 0);
+  --c: no-repeat linear-gradient(theme(colors.violet.600) 0 0);
   background:
     var(--c) 0% 50%,
     var(--c) 50% 50%,
